# steamos-compositor

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  loadargb_cursor  meson.build  steamcompmgr  udev_is_boot_vga
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: .gitignore  changelog  control  files  rules  steamos-compositor.postinst.debhelper  steamos-compositor.substvars
debian/steamos-compositor/DEBIAN/: control  md5sums  postrm
debian/steamos-compositor/usr/share/doc/steamos-compositor/: copyright
src/: build.sh  loadargbcursor.c  main.cpp  steamcompmgr.c  udev_is_boot_vga.c
usr/share/xsessions/: steamos.desktop
