AC_INIT([SteamOS Compostitor], [1.0], [linux@steampowered.com], [steamos-compositor], [http://support.steampowered.com])
AM_INIT_AUTOMAKE([foreign tar-ustar])
PKG_CHECK_MODULES([DEPS],xxf86vm gl x11 xrender xcomposite SDL_image libudev xext xdamage)

AC_PROG_CC
AC_PROG_CC_STDC

AC_OUTPUT([Makefile])
